--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 	<title>MONSTR</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
 	<h1>MONSTR</h1>
-	<div id="response-container"></div>
+    <h2>Messages</h2>
+	<div id="messages-container"></div>
 	<script src="./script.js"></script>
 </body>
 </html>
