some good improvements

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MONSTR</title>
+	<title>0x50 RELAY OVERVIEW</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<h1>MONSTR</h1>
-    <h2>Messages</h2>
-	<div id="messages-container"></div>
+	<h1>0x50 RELAY OVERVIEW</h1>
+    <h2>Short Text Notes (Kind: 1)</h2>
+	<div id="short-text-notes-container"></div>
+    <h2>DMs (Kind: 4)</h2>
+	<div id="dm-container"></div>
 	<script src="./script.js"></script>
 </body>
 </html>
