add long text notes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<h1>0x50 RELAY OVERVIEW</h1>
     <h2>Short Text Notes (Kind: 1)</h2>
 	<div id="short-text-notes-container"></div>
+    <h2>Long Text Notes (Kind: 30023)</h2>
+	<div id="long-text-notes-container"></div>
     <h2>DMs (Kind: 4)</h2>
 	<div id="dm-container"></div>
 	<script src="./script.js"></script>
