--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
 	<h1>0x50 RELAY OVERVIEW</h1>
+    <div id="info-container"></div>
     <h2>Short Text Notes (Kind: 1)</h2>
 	<div id="short-text-notes-container"></div>
     <h2>DMs (Kind: 4)</h2>
 	<div id="dm-container"></div>
+    <h2>Metadata (Kind: 0)</h2>
+	<div id="metadata-container"></div>
     <h2>Long Text Notes (Kind: 30023)</h2>
 	<div id="long-text-notes-container"></div>
 	<script src="./script.js"></script>
